# mergebams

./: Cargo.toml  LICENSE.txt  README.md
src/: mergebams.rs  params_count.yml  params_mergebams.yml
test/: out_bam.bam  out_bam.sorted.bam
