[package]
name = "mergebams"
version = "0.2.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "0.1.4"
clap = { version = "2.33.0", features = ["yaml"] }
bytes = "1.1.0"
simple-log = "1.5.1"
toml = "0.5.7"
serde_derive="1.0.140"
serde="1.0.147"
csv="1.1.6"
flate2 = "1.0.24"
differ = "1.0.4"
itertools = "0.10.5"

[[bin]]
name = "mergebams"
path = "src/mergebams.rs"


